<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/pblue"
    android:orientation="vertical"
    tools:context=".loginReg">


    <ImageView
        android:id="@+id/Login_reg_Logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/Logo_img"
        android:src="@drawable/logopng" />

    <TextView
        android:id="@+id/Login_Reg_wellcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/login_reg_wellcome_msg"
        android:textColor="@color/pllblue"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Login_Reg_Login_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/login_btn"
        android:clickable="true"
        android:focusable="true"
        android:insetLeft="0dp"
        android:text="@string/login_btn"
        android:textColor="@color/pblue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Login_Reg_newuser_text"
        android:layout_width="191dp"
        android:layout_height="21dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/NewUser_txt"
        android:textColor="@color/pllblue"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Login_Reg_Reg_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/login_btn"
        android:clickable="true"
        android:focusable="true"
        android:insetLeft="0dp"
        android:text="@string/Reg_btn"
        android:textColor="@color/pblue"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>