<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_rocket_View"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RocketTimeTableView">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg2"
        tools:context=".RocketTimeTableView">

        <include
            layout="@layout/main_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="669dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            android:padding="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Time_txtV" />

            <EditText
                android:id="@+id/RoketAddtime"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="time" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Title_txtV" />

            <EditText
                android:id="@+id/RoketAddtitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Description_txtV" />

            <EditText
                android:id="@+id/RoketAdddescription"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:ems="10"
                android:gravity="top|left"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/saveRocketNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_200"
                android:text="@string/Save_btn"
                app:cornerRadius="50dp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        >

        <include layout="@layout/main_navigation_drawer" />



    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>





